# claire

./: .claudeignore  .gitignore  README.md  pyproject.toml
claire/: claire.py  embeddings.py  settings.py
examples/: ask_about_merge_request_comments.py  summarize_merge_request.py
